<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SelfiePreviewFragment">

    <ImageView
        android:id="@+id/selfiePreviewImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/dummy_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.chathurangashan.camerax.SelfieCutoutView
        android:id="@+id/cameraCutoutView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:backgroundColor="@color/secondary_gray"
        app:backgroundDrawable="@drawable/ic_profile"
        app:backgroundDrawableColor="@color/human_figure_neck_color"
        app:backgroundDrawableHeight="428.35dp"
        app:backgroundDrawableMarginTop="16dp"
        app:circleRadius="@dimen/circle_cut_out_radius"
        app:cutoutMargin="8dp"
        tools:layout_editor_absoluteX="-170dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/titleTextView"
        style="@style/HeaderTextStyleLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/selfie_scan_result_title"
        app:layout_constraintBottom_toTopOf="@+id/descriptionTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/descriptionTextView"
        style="@style/BodyTextStyleLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selfie_scan_result_description"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/center_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/documentTypeTextView"
        style="@style/BodyTextStyleLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/selfie_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/center_guideline" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continueButton"
        style="@style/PrimaryButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btn_text_continue"
        app:layout_constraintBottom_toTopOf="@id/tryAgainButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tryAgainButton"
        style="@style/SecondaryButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/continueButton"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/btn_text_try_again"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/dynamicalyAlineGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="titleTextView,descriptionTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>