<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.SelfieCaptureFragment">

    <SurfaceView
        android:id="@+id/cameraOverlayView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.camera.view.PreviewView
        android:id="@+id/cameraView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.chathurangashan.camerax.ui.SelfieCutoutView
        android:id="@+id/cameraCutoutView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        app:backgroundColor="@color/secondary_gray"
        app:circleRadius="@dimen/circle_cut_out_radius"
        app:cutoutMargin="8dp" />

    <TextView
        android:id="@+id/titleTextView"
        style="@style/HeaderTextStyleLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/selfie_scan_title"
        app:layout_constraintBottom_toTopOf="@+id/descriptionTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/descriptionTextView"
        style="@style/BodyTextStyleLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selfie_scan_description"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/center_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/documentTypeTextView"
        style="@style/BodyTextStyleLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selfie_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/center_guideline" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/cameraFabButton"
        style="@style/PrimaryFabIconStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/dummy_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_camera_alt" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/dynamicalyAlineGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="titleTextView,descriptionTextView,documentTypeTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>